[package]
name = "balpan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cc = "1.0.79"
clap = "4.3.21"
etcetera = "0.8.0"
git2 = "0.17.2"
ignore = "0.4.20"
indoc = "2.0.3"
libloading = "0.8.0"
log = "0.4.18"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.5.0"
threadpool = "1.8.1"
toml = "0.7.4"
tree-sitter = "0.20.10"
